# sphinx

./: .gitignore  README.md
ml-experiments/: requirements.txt
ml-experiments/programl-llvm-experiment/: .gitignore  GGNN_test.py  GGNN_test_real.py  GGNN_train.py
ml-experiments/programl-llvm-experiment/config/: config.yaml  params.py
ml-experiments/programl-llvm-experiment/datasets/: test_files.txt  validation_files.txt
ml-experiments/programl-llvm-experiment/models/: liveness_batch=20_bestf1score=09757.pt  liveness_batch=32_bestf1score=09737.pt  liveness_batch=64_bestf1score=09564.pt
ml-experiments/programl-llvm-experiment/utils/: create_data_splits.py  plot_training_results.py
ml-experiments/programl-llvm-experiment/utils/proto/: util.proto
ml-experiments/programl-llvm-experiment/utils/proto_python/: features_pb2.pyi  program_graph_pb2.py  program_graph_pb2.pyi  util_pb2.pyi
ml-experiments/programl-mlir-liveness/: GGNN_test.py  GGNN_train.py
ml-experiments/programl-mlir-liveness/config/: config.yaml  params.py
ml-experiments/programl-mlir-liveness/datasets/: test_files.txt  train_files.txt  validation_files.txt
ml-experiments/programl-mlir-liveness/models/: liveness_epoch_610_f1=0.974.pt
ml-experiments/programl-mlir-liveness/utils/: create_split_txt_files.py  plot_training_results.py  split_dataset.py
ml-experiments/programl-mlir-liveness/utils/proto/: program_graph.proto
ml-experiments/programl-mlir-liveness/utils/proto_python/: features_pb2.py  util_pb2.py
ml-experiments/programl-mlir-liveness/vocab/: programl_mlir_vocab.csv
mlir-to-programl/: .gitignore  CMakeLists.txt  MLIRToProGraMLBuilder.cpp  MLIRToProGraMLBuilder.h  main.cpp
mlir-to-programl/proto_cpp/: features.pb.h  program_graph.pb.h  util.pb.h
